--- a/.htaccess
+++ b/.htaccess
@@ -4,6 +4,26 @@ AddType text/css .css
 AddType application/x-httpd-php .php .htm .html
 
 
+
+RewriteEngine On
+
+
+
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_FILENAME}\.php -f
+RewriteRule ^(.*)$ $1.php
+
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_FILENAME}\.html -f
+RewriteRule ^(.*)$ $1.html
+
+
+# display php errors
+# php_flag display_startup_errors on
+# php_flag display_errors on
+# php_flag html_errors on
+
+
 # Bad Rquest
 ErrorDocument 400 /errors/400.html
 # Authorization Required
